Added properties file, updated naming and logs