@@ -1,11 +1,12 @@
 package com.solvd.pages;
 
+
+import org.apache.commons.lang3.StringUtils;
 import org.openqa.selenium.WebDriver;
 import org.openqa.selenium.WebElement;
 import org.openqa.selenium.support.FindBy;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class SearchPage extends AbstractPage {
     @FindBy(className = "prdocutname")
@@ -17,7 +18,11 @@ public class SearchPage extends AbstractPage {
 
 
     public boolean areAllProductNamesMatching(String name) {
-        List<WebElement> displayedProductNames = productNames.stream().filter(element -> isDisplayed(element)).collect(Collectors.toList());
+        if(StringUtils.isEmpty(name)) {
+            logger.info("Attempted check with empty name of product");
+            return false;
+        }
+        List<WebElement> displayedProductNames = productNames.stream().filter(this::isDisplayed).toList();
         for (WebElement productName : displayedProductNames) {
             String productText = getText(productName);
             logger.info("Checking name of product: {}", productText);
